--- a/dev/scss/components/_navigation.scss
+++ b/dev/scss/components/_navigation.scss
@@ -2,6 +2,13 @@
     Navigation
 ============= */
 #nav-container {
+     width: 100%;
+     height: 100%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+
+     
     >div {
         ul {
             height: 100%;
