--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -412,6 +412,13 @@ a {
 /* =============
     Navigation
 ============= */
+#nav-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 #nav-container > div ul {
   height: 100%;
 }
@@ -542,12 +549,21 @@ a {
 #header > div #burger-container i:hover {
   color: #FFBF00;
 }
+#header > div #burger-container #burger {
+  position: absolute;
+  z-index: 1000;
+  height: 40px;
+  width: 40px;
+  border: 1px solid red;
+}
 #header > div #nav-container {
   background-color: #EAE2B7;
   color: #1E555C;
   grid-area: nav;
-  padding: 20px 0 10px;
+  width: 100vw;
+  height: 100vh;
   text-align: center;
+  z-index: 500;
 }
 @media (min-width: 768px) {
   #header > div #nav-container {
