--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -48,6 +48,11 @@
             display: flex;
             grid-area: burger;
             padding: 10px;
+            position: relative;
+            // width: 100vw;
+            // height: 100%;
+            // z-index: 500;
+
 
             @include md {
                 display: none !important;
@@ -68,7 +73,7 @@
                 z-index: 1000;
                 height: 40px;
                 width: 40px;
-                border: 1px solid red;
+                // border: 1px solid red;
                 // background-color: #fff;
             }
         }
@@ -80,11 +85,13 @@
             width: 100vw;
             height: 100vh;
             text-align: center;
-            z-index: 500;
+            // z-index: 815;
+            position: fixed;
 
             @include md {
                 background-color: transparent;
                 display: block !important;
+               
             }
 
             >div {
