--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -74,14 +74,14 @@
                 width: 100%;
 
                 &:nth-child(2){
-                    top: 8px;
-                    width: 100%
-                }
-
-                &:nth-child(3){
                     top: 16px;
                     width: 100%
                 }
+
+                // &:nth-child(3){
+                //     top: 16px;
+                //     width: 100%
+                // }
             } 
             }
 
