update hidden menu

--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -19,6 +19,7 @@
 @import "layout/_footer";
 
 // Sections Styles
+@import "sections/_sidemenu.scss";
 @import "sections/_hero";
 @import "sections/_glance";
 @import "sections/_attractions";
