--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -711,6 +711,54 @@ footer > div #subscribe form button:hover {
   cursor: pointer;
 }
 
+#hidden {
+  background-color: #EAE2B7;
+  height: 100vh;
+  text-align: center;
+  position: absolute;
+  padding: 100px 0;
+  position: absolute;
+  width: 50%;
+  left: 0;
+  top: 50px;
+}
+@media (min-width: 768px) {
+  #hidden {
+    display: none;
+  }
+}
+#hidden > div nav ul li {
+  margin: 20px;
+}
+#hidden > div nav ul li a:link, #hidden > div nav ul li a:visited {
+  text-decoration: none;
+  color: #86A873;
+  font-size: 1.25rem;
+  transition: 0.025s;
+}
+#hidden > div nav ul li a:link:hover, #hidden > div nav ul li a:link:active, #hidden > div nav ul li a:visited:hover, #hidden > div nav ul li a:visited:active {
+  color: #FFBF00;
+}
+#hidden > div section {
+  margin-top: 100px;
+}
+#hidden > div section ul {
+  display: flex;
+  justify-content: center;
+}
+#hidden > div section ul li {
+  margin: 0 10px;
+}
+#hidden > div section ul li a:link, #hidden > div section ul li a:visited {
+  text-decoration: none;
+  color: #1E555C;
+  font-size: 1.25rem;
+  transition: 0.025s;
+}
+#hidden > div section ul li a:link:hover, #hidden > div section ul li a:link:active, #hidden > div section ul li a:visited:hover, #hidden > div section ul li a:visited:active {
+  color: #FFBF00;
+}
+
 #hero {
   margin-bottom: 64px;
   margin-top: -100px;
