--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -20,6 +20,7 @@
 
 // Sections Styles
 @import "sections/_sidemenu.scss";
+@import "sections/_main.scss";
 @import "sections/_hero";
 @import "sections/_glance";
 @import "sections/_attractions";
