--- a/dev/scss/sections/_sidemenu.scss
+++ b/dev/scss/sections/_sidemenu.scss
@@ -5,11 +5,11 @@
     text-align: center;
     position: absolute;
     padding: 100px 0;
-    position: absolute;
     width: 42.2%;
     left:0;
     top:50px;
-    z-index: -1;
+    z-index: -7;
+    position: fixed;
 
    @include md{
        display: none;
