--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -418,6 +418,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  display: none;
 }
 @media (min-width: 768px) {
   #nav-container > div ul {
@@ -716,11 +717,10 @@ footer > div #subscribe form button:hover {
   height: 100%;
   text-align: center;
   position: absolute;
-  padding: 100px 0;
-  width: 42.2%;
+  padding: 300px 0;
+  width: 42.3%;
   left: 0;
-  top: 50px;
-  z-index: -7;
+  z-index: -1;
   position: fixed;
 }
 @media (min-width: 768px) {
@@ -761,7 +761,8 @@ footer > div #subscribe form button:hover {
 }
 
 main {
-  background-color: white;
+  background-color: white !important;
+  position: relative;
 }
 
 #hero {
