--- a/dev/scss/sections/_main.scss
+++ b/dev/scss/sections/_main.scss
@@ -1,4 +1,13 @@
+// #cover-up{
+//     width: 100%;
+//     height: 100%;
+//     background-color:  rgb(0,48,73,0.2);
+//     position: absolute;
+// }
+
+
+
 main{
-    background-color: white;
-    // position: relative;
+    background-color: white !important;
+    position: relative;
 }
