--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -52,7 +52,7 @@
         #burger-container {
             cursor: pointer;
             width: 40px;
-            position: relative;
+            position: absolute;
             height: 20px;
             margin-left: 16px;
             grid-area: burger;
@@ -68,7 +68,7 @@
                 margin-top: 20px;
                 height: 3px;
                 position: absolute;
-                top:0;
+                top:50;
                 right: 0;
                 width: 100%;
 
