--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -56,6 +56,7 @@
             height: 20px;
             margin-left: 16px;
             grid-area: burger;
+            position: fixed;
 
             @include md {
                 display: none !important;
