--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -418,6 +418,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  display: none;
 }
 @media (min-width: 768px) {
   #nav-container > div ul {
