--- a/dev/scss/sections/_main.scss
+++ b/dev/scss/sections/_main.scss
@@ -1,8 +1,10 @@
 // #cover-up{
-//     width: 100%;
+//     width: 100vw;
 //     height: 100%;
 //     background-color:  rgb(0,48,73,0.2);
+//     margin-right: -50px;
 //     position: absolute;
+//     left: -100px;
 // }
 
 
