--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -28,4 +28,9 @@ $asparagus: #86A873;
 $egg: #EAE2B7;
 $yellow: #FFBF00;
 $rock: #414B3F;
-$teal: rgb(0,48,73,0.2)
+$teal: rgba(0,48,73,0.2);
+
+:root{
+     --fancybox-bg: rgba(0,48,73,0.8);
+
+}
