--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -10,6 +10,10 @@ html {
 /* =============
     Variables
 ============= */
+:root {
+  --fancybox-bg: rgba(0,48,73,0.8);
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
